--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flame: ^1.23.0
   flame_svg: ^1.11.4
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
